--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FitnessApp">
+        android:theme="@style/Theme.FitnessApp"
+        android:hardwareAccelerated="true">
         <activity android:name=".ExercisesActivity"></activity>
         <activity android:name=".CategoriesActivity" />
         <activity android:name=".ProfileActivity" />
