--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FitnessApp"
-        android:hardwareAccelerated="true">
-        <activity android:name=".ExercisesActivity"></activity>
+        android:theme="@style/Theme.FitnessApp">
+        <activity android:name=".ExercisesActivity" />
         <activity android:name=".CategoriesActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".RegisterUser" />
